--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
         <item>Average Speed</item>
         <item>Calories Burned</item>
     </string-array>
-    <string name="google_maps_key">AIzaSyAFZ3as31NQEO74MbcLfQCOWN1YuLuO6Qk</string>
+    <string name="google_maps_key"></string>
 </resources>
